Product ve Slider ImageUpload işlemi yapıldı

--- a/TeklifSite/appsettings.json
+++ b/TeklifSite/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings" {
+  "ConnectionStrings" :{
     "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=teklifDb;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
   "Logging": {
